<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android OPC Example</string>
    <string name="hello">Hello android-opc-example!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="serverLabel">Server</string>
    <string name="userLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="connectLabel">Connect</string>
    <string name="clsidLabel">CLSID</string>
    <string name="browseLabel">Browse</string>
    <string name="nodeDescription">Node Description</string>
    <string name="selectServerLabel">Select OPC Server</string>
	<string name="connectionInfoMissing">Hostname, Username, Password, and CLSID required.</string>
	<string name="browseInfoMissing">Hostname, Username, Password, and CLSID required.</string>
	<string name="errorBrowsingMsg">Error browsing the OPC Server</string>
	<string name="tempString">TempString</string>
	<string name="currentValueLabel">Current Value</string>
	<string name="refreshLabel">Refresh</string>
	<string name="subscribeLabel">Subscribe</string>
	<string name="unSubscribeLabel">Unsubscribe</string>
	<string name="deviceReadLabel">Device Read</string>
	<string name="pollIntervalLabel">Poll Interval</string>
</resources>