<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tagNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tempString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/extra_large" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tagNameField"
        android:text="@string/currentValueLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentValueVield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:text="@string/tempString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/subscribeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/refreshBtn"
        android:layout_alignBottom="@+id/refreshBtn"
        android:layout_toRightOf="@+id/refreshBtn"
        android:text="@string/subscribeLabel" />

    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currentValueVield"
        android:text="@string/refreshLabel" />

    <CheckBox
        android:id="@+id/deviceReadCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/subscribeBtn"
        android:checked="false"
        android:text="@string/deviceReadLabel" />

</RelativeLayout>
